@@ -2,6 +2,8 @@
 	- FITS dialog finished
 	- FITS data can be linked to files
 	- ImportFITSFile added to command interface
+	- Linking works for datasets, and added various options to 
+	ImportFile2D
 	
 * 2005-07-05 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Start FITS import dialog
